# same

./: Cargo.toml  LICENSE.txt  README.markdown  scrap_code.markdown
benches/: hash_dir.rs  hash_file.rs
notes/: by_hand.rs
src/: lib.rs  main.rs
test-files/back_ups2/bar/a_sub_dir/: a.txt
test-files/corrupted_back_up/bar/a_sub_dir/: a.txt
test-files/lasagna/: pasta.markdown
tests/: rel-path-tests.rs  same-tests.rs
tests/test-files/hidden/hidden/: .invis
