[package]
name = "same"
version = "0.1.31"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
# blake3 = { version = "1.1.0", features = ["rayon"]}
memmap = "0.7.0"
structopt = "0.3.25"
# seahash = "4.1.0"
ahash = "0.7.6"
# walkdir = "2"
ignore = "0.4.18"
