[package]
name = "same"
version = "0.1.44"
edition = "2021"

[dependencies]
rayon = "1.5.1"
glob = "0.3.0"
memmap = "0.7.0"
structopt = "0.3.25"
ahash = "0.7.6"
# walkdir = "2"
ignore = "0.4.18"
crossbeam = "0.8.1"
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = "0.3"
seahash = "4.1.0"
fxhash = "0.2.1"
fasthash = "0.4.0"

[[bench]]
name = "hash_file"
harness = false

[[bench]]
name = "hash_dir"
harness = false
